Changes Since beta 0.0.3
- Option to change the background when the Pin is prompted for
- Allow different parts of PinSentry to be disabled (Navigation, plugins etc)
- Stop Double Pin Prompt on quick double select of video
- Fix issue with TV Show not being detected as protected

v1.0.0
- Initial Version